@@ -416,6 +416,8 @@ Angel Carpintero
    * Avoid possible stack smashing in v4l_open_vidpipe().
    * Allow compile with OpenSuse ffmpeg package (15594svn-20081010)
      http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x10x25x070400
+   * Avoid segfault detecting strerror_r() version GNU or SUSv3.
+   * Fix fd leaks in external pipe. 
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
